--- a/fontend/html/header.html
+++ b/fontend/html/header.html
@@ -54,9 +54,7 @@
                 <div class="contact-item hotline-repair">
                   <div class="text">
                     <span>Bảo hành / Phần mềm</span>
-                    <a
-                      href="tel:0373772291"
-                      title="Hotline bảo hành / Phần mềm"
+                    <a href="tel:0373772291" title="Hotline bảo hành / Phần mềm"
                       ><strong>0373772291</strong></a
                     >
                   </div>
@@ -75,6 +73,112 @@
         </div>
       </div>
     </header>
+    <div class="nav-main scroll" id="nav-main">
+      <div class="container">
+        <div class="wrap">
+          <div
+            class="row align-items-center justify-content-center py-1 py-lg-0"
+          >
+            <div
+              class="col-12 col-lg-9 col-xl-10 left d-flex align-items-center"
+            >
+              <div class="category-bar mb-nav-main" id="nav-mb">
+                <div class="wrap-scroll">
+                  <nav class="box box-2">
+                    <ul>
+                      <li class="has-child">
+                        <a href="#" class>APPLE IPHONE</a>
+                        <div
+                          class="dropdown dropdown-0 data-menu-home-1"
+                        >
+                          <div class="item-has-child">
+                            <a href="#" title="Apple iPhone 16 Pro Max"
+                              >Apple iPhone 16 Pro Max</a
+                            >
+                            <a href="#" title="Apple iPhone 16 Pro"
+                              >Apple iPhone 16 Pro</a
+                            >
+                            <a href="#" title="Apple iPhone 16 Series"
+                              >Apple iPhone 16</a
+                            >
+                            <a href="#" title="Apple iPhone 15 Series"
+                              >Apple iPhone 15</a
+                            >
+                            <a href="#" title="Apple iPhone 15 Series Plus"
+                              >Apple iPhone 15 Plus</a
+                            >
+                            <a href="#" title="Apple iPhone 15 Series Pro"
+                              >Apple iPhone 15 Pro</a
+                            >
+                            <a href="#" title="Apple iPhone 15 Series Pro Max"
+                              >Apple iPhone 15 Pro Max</a
+                            >
+                            <a href="#" title="Apple iPhone 14 Series"
+                              >Apple iPhone 14</a
+                            >
+                            <a href="#" title="Apple iPhone 14 Series Pro Max"
+                              >Apple iPhone 14 Pro Max</a
+                            >
+                          </div>
+                        </div>
+                      </li>
+                      <li class="has-child">
+                        <a href="#">SAMSUNG</a>
+                        <div
+                          class="dropdown dropdown-0 d-grid data-menu-home-1"
+                        >
+                          <a href="#" title="Samsung Galaxy Fold & Z Flip"
+                            >Samsung Galaxy Fold & Z Flip</a
+                          >
+                          <a href="#" title="Samsung Galaxy S"
+                            >Samsung Galaxy S</a
+                          >
+                          <a href="#" title="Samsung Galaxy A"
+                            >Samsung Galaxy A</a
+                          >
+                        </div>
+                      </li>
+                      <li class="has-child">
+                        <a href="#">OPPO</a>
+                        <div
+                          class="dropdown dropdown-0 d-grid data-menu-home-1"
+                        >
+                          <a href="#" title="OPPO Find">OPPO Find</a>
+                          <a href="#" title="OPPO Reno">OPPO Reno</a>
+                          <a href="#" title="OPPO A">OPPO A</a>
+                        </div>
+                      </li>
+                      <li class="has-child">
+                        <a href="#">XIAOMI</a>
+                        <div
+                          class="dropdown dropdown-0 d-grid data-menu-home-1"
+                        >
+                          <a href="#" title="Xiaomi Redmi">Xiaomi Redmi</a>
+                        </div>
+                      </li>
+                      <li class="has-child">
+                        <a href="#">NOKIA</a>
+                        <div
+                          class="dropdown dropdown-0 d-grid data-menu-home-1"
+                        >
+                          <a href="#" title="Smart Phone Nokia"
+                            >Smart Phone Nokia</a
+                          >
+                          <a href="#" title="Feature Phone Nokia"
+                            >Feature Phone Nokia</a
+                          >
+                        </div>
+                      </li>
+                    </ul>
+                  </nav>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!--  filter category mobile -->
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
