fix link css js <home, policy, header>

--- a/fontend/policy.html
+++ b/fontend/policy.html
@@ -27,7 +27,7 @@
       href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
     />
     <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
-    <link rel="stylesheet" href="../css/policy.css" />
+    <link rel="stylesheet" href="css/policy.css" />
   </head>
   <body style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">
     <div class="main page-address-insurance" id="">
@@ -494,6 +494,5 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <script src="../css/policy.css"></script>
   </body>
 </html>
