--- a/fontend/filter.html
+++ b/fontend/filter.html
@@ -4,30 +4,84 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Filter Products</title>
-    <link rel="stylesheet" href="styles/filter.css">
+    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css" rel="stylesheet">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="styles/filter.css">
 </head>
 <body>
-    <div class="container mt-5">
-        <h2 class="text-center">Filter Products</h2>
-        <form class="row g-3">
-            <div class="col-md-4">
-                <label for="minPrice" class="form-label">Min Price</label>
-                <input type="number" class="form-control" id="minPrice" placeholder="Enter minimum price">
-            </div>
-            <div class="col-md-4">
-                <label for="maxPrice" class="form-label">Max Price</label>
-                <input type="number" class="form-control" id="maxPrice" placeholder="Enter maximum price">
-            </div>
-            <div class="col-md-4">
-                <label for="brand" class="form-label">Brand</label>
-                <input type="text" class="form-control" id="brand" placeholder="Enter brand">
-            </div>
-            <div class="col-md-12">
-                <button type="submit" class="btn btn-primary w-100">Search</button>
-            </div>
-        </form>
+    <div class="container mt-4">
+        <div class="filter-container mb-4 p-3 border rounded">
+            <form id="filterForm" class="row g-3">
+                <!-- Lọc theo thương hiệu -->
+                <div class="col-md-3">
+                    <label for="brand" class="form-label">Thương hiệu</label>
+                    <select id="brand" class="form-select">
+                        <option value="">Tất cả</option>
+                        <option value="SAMSUNG">Samsung</option>
+                        <option value="APPLE">Apple</option>
+                        <option value="XIAOMI">Xiaomi</option>
+                    </select>
+                </div>
+                <!-- Lọc theo giá -->
+                <div class="col-md-3">
+                    <label for="priceRange" class="form-label">Khoảng giá</label>
+                    <select id="priceRange" class="form-select">
+                        <option value="">Tất cả</option>
+                        <option value="below5">Dưới 5 triệu</option>
+                        <option value="5to10">Từ 5 - 10 triệu</option>
+                        <option value="above10">Trên 10 triệu</option>
+                    </select>
+                </div>
+                <!-- Lọc theo dung lượng -->
+                <div class="col-md-3">
+                    <label for="storage" class="form-label">Dung lượng</label>
+                    <select id="storage" class="form-select">
+                        <option value="">Tất cả</option>
+                        <option value="64">64GB</option>
+                        <option value="128">128GB</option>
+                        <option value="256">256GB</option>
+                    </select>
+                </div>
+                <!-- Sắp xếp theo -->
+                <div class="col-md-3">
+                    <label class="form-label">Sắp xếp theo</label>
+                    <div class="dropdown">
+                        <button class="btn btn-outline-secondary dropdown-toggle w-100" type="button" id="sortDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="bi bi-sort-up"></i> Sắp xếp theo
+                        </button>
+                        <ul class="dropdown-menu p-3" aria-labelledby="sortDropdown">
+                            <div class="form-check">
+                                <input class="form-check-input sort-checkbox" type="checkbox" value="a-z" id="sortAZ">
+                                <label class="form-check-label" for="sortAZ">A → Z</label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input sort-checkbox" type="checkbox" value="z-a" id="sortZA">
+                                <label class="form-check-label" for="sortZA">Z → A</label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input sort-checkbox" type="checkbox" value="price-asc" id="sortAsc">
+                                <label class="form-check-label" for="sortAsc">Giá tăng dần</label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input sort-checkbox" type="checkbox" value="price-desc" id="sortDesc">
+                                <label class="form-check-label" for="sortDesc">Giá giảm dần</label>
+                            </div>
+                        </ul>
+                    </div>
+                </div>
+                <!-- Nút áp dụng -->
+                <div class="col-md-12 text-center">
+                    <button type="button" class="btn btn-primary" id="applyFilters">Áp dụng bộ lọc</button>
+                </div>
+            </form>
+        </div>
     </div>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Custom JS -->
     <script src="js/filters.js"></script>
 </body>
 </html>
