--- a/fontend/login.html
+++ b/fontend/login.html
@@ -1,43 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login</title>
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-  
-  <link rel="stylesheet" href="styles/login.css">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Đăng Nhập</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Font Awesome for icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <!-- Custom Styles -->
+    <link rel="stylesheet" href="styles/login.css">
 </head>
+
 <body>
-  <div class="container d-flex justify-content-center align-items-center min-vh-100">
-    <div class="card shadow p-4" style="width: 100%; max-width: 400px;">
-      <h2 class="text-center mb-4">Login</h2>
-      <form action="#">
-        <div class="mb-3">
-          <label for="loginEmail" class="form-label">Email</label>
-          <input type="email" class="form-control" id="loginEmail" placeholder="Enter your email" required>
+    <div class="d-flex justify-content-center align-items-center min-vh-100 bg-light">
+        <div class="auth-container shadow-lg rounded p-4 p-sm-5 bg-white">
+            <h2 class="auth-title text-center mb-4 text-primary">Đăng Nhập</h2>
+            <form class="auth-form" id="login-form" onsubmit="handleLogin(event)">
+                <div class="form-group mb-3">
+                    <label for="login-phone" class="form-label">Số điện thoại</label>
+                    <input type="text" id="login-phone" name="phone" class="form-control" placeholder="Nhập số điện thoại" required>
+                </div>
+                <div class="form-group mb-3 position-relative">
+                    <label for="login-password" class="form-label">Mật khẩu</label>
+                    <input type="password" id="login-password" name="password" class="form-control" placeholder="Nhập mật khẩu" required>
+                    <i class="fas fa-eye toggle-password" onclick="togglePassword('login-password')"></i>
+                </div>
+                <div class="form-group mb-3">
+                    <button type="button" class="btn btn-outline-primary w-100" onclick="requestOtp()">Nhận mã OTP</button>
+                </div>
+                <div class="form-group mb-3">
+                    <label for="login-otp" class="form-label">Mã OTP</label>
+                    <input type="text" id="login-otp" name="otp" class="form-control" placeholder="Nhập mã OTP">
+                </div>
+                <button type="submit" class="btn btn-primary w-100">Đăng nhập</button>
+            </form>
         </div>
-        <div class="mb-3">
-          <label for="loginPassword" class="form-label">Password</label>
-          <div class="input-group">
-            <input type="password" class="form-control" id="loginPassword" placeholder="Enter your password" required>
-            <button class="btn btn-outline-secondary" type="button" id="toggleLoginPassword">
-              <i id="eyeLoginIcon" class="fa-solid fa-eye-slash"></i>
-            </button>
-          </div>
-        </div>
-        
-        <button type="submit" class="btn btn-primary w-100">Login</button>
-      </form>
-      <p class="text-center mt-3">
-        Don't have an account? <a href="signup.html">Sign Up</a>
-      </p>
     </div>
-  </div>
-  <script src="js/login.js"></script>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Custom JS -->
+    <script src="js/login.js"></script>
 </body>
+
 </html>
